--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    
+                    <div class="col-md-6 d-flex ms-auto flex-column">
                         <label class="form-label">Message</label>
                          <textarea class="form-control" rows="3"></textarea>
                         <h6 class="text-muted" style="font-size: 0.7rem;">Add any notes here.</h6>
-                    </div>                    
+                    </div>                 
                 </div>
 
             </form>
