--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <div class="row mb-3">
                     <div class="col-md-5">
                         <label class="form-label">Card#</label>
-                        <input type="text" class="form-control" placeholder="XXXX XXXX XXXX XXXX" pattern="[0-9]{16}">
+                        <input type="number" class="form-control" placeholder="XXXX XXXX XXXX XXXX" pattern="[0-9]{16}">
                     </div>
                     <div class="col-md-3">
                         <label class="form-label">CVC#</label>
-                        <input type="text" class="form-control" placeholder="000" pattern="[0-9]{3}">
+                        <input type="number" class="form-control" placeholder="000" pattern="[0-9]{3}">
                     </div>
                     <div class="col-md-4">
                         <label class="form-label">Amount$</label>
